--- a/index.html
+++ b/index.html
@@ -461,7 +461,11 @@
     let kNihongo2;
     let hanyuTab; // C,Gパターンの中国語の配列
     let saveQuestions;  // questionsの保存 for Oパターン
-
+    let voices = [];
+    // 初期音声リストの取得
+    voices = speechSynthesis.getVoices();
+    // 音声リストが取得できない場合は、音声リストが取得できるようになるまで待機
+    // 
     //
     // Declare webkitSpeechRecognition
     window.SpeechRecognition = window.SpeechRecognition || webkitSpeechRecognition;
@@ -565,6 +569,15 @@
       var uttr = new SpeechSynthesisUtterance(td.textContent);
       uttr.lang = "zh-CN"
       uttr.rate = speakSpeedRate();
+      // 利用可能な音声を確認
+      const voices = speechSynthesis.getVoices();
+      const chineseVoice = getChineseVoice();
+
+      if (chineseVoice) {
+        uttr.voice = chineseVoice;
+      } else {
+        console.warn('Chinese voice not found, using default voice.');
+      }
       speechSynthesis.cancel();
       speechSynthesis.speak(uttr);
 
@@ -578,6 +591,15 @@
       var uttr = new SpeechSynthesisUtterance(hanyuString);
       uttr.lang = "zh-CN"
       uttr.rate = speakSpeedRate();
+      // 利用可能な音声を確認
+      const voices = speechSynthesis.getVoices();
+      const chineseVoice = getChineseVoice();
+
+      if (chineseVoice) {
+        uttr.voice = chineseVoice;
+      } else {
+        console.warn('Chinese voice not found, using default voice.');
+      }
       speechSynthesis.cancel();
       speechSynthesis.speak(uttr);
 
@@ -597,6 +619,15 @@
         var uttr = new SpeechSynthesisUtterance(setHanyuBunkai(td.textContent));
         uttr.lang = "zh-CN"
         uttr.rate = speakSpeedRate();
+        // 利用可能な音声を確認
+      const voices = speechSynthesis.getVoices();
+      const chineseVoice = getChineseVoice();
+
+      if (chineseVoice) {
+        uttr.voice = chineseVoice;
+      } else {
+        console.warn('Chinese voice not found, using default voice.');
+      }
         speechSynthesis.cancel();
         speechSynthesis.speak(uttr);
 
@@ -636,12 +667,32 @@
       var uttr = new SpeechSynthesisUtterance(hanyuWords);
       uttr.lang = "zh-CN"
       uttr.rate = speakSpeedRate();
+      // 利用可能な音声を確認
+      const voices = speechSynthesis.getVoices();
+      const chineseVoice = getChineseVoice();
+
+      if (chineseVoice) {
+        uttr.voice = chineseVoice;
+      } else {
+        console.warn('Chinese voice not found, using default voice.');
+      }
       speechSynthesis.cancel();
       speechSynthesis.speak(uttr);
 
       // }
 
     }
+    function getChineseVoice() {
+      if (voices.length === 0) {
+        voices = speechSynthesis.getVoices();
+      }
+      return voices.find(voice => voice.lang === 'zh-CN');
+    }
+
+    // 音声リストが更新されたときに再取得
+    speechSynthesis.onvoiceschanged = function () {
+      voices = speechSynthesis.getVoices();
+    };
 
     // speak speed 調整 2023-06-22
     function speakSpeedRate() {
